--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@
 
 # Composer PHAR
 /composer.phar
+/composer.lock
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
