--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,26 @@
 {
-    "name": "dambacher/cb-owasys-bundle",
-    "license": "proprietary",
-    "type": "project",
-    "autoload": {
-        "psr-4": {
-            "": "src/"
+    "name": "coffeebike/owasys-bundle",
+    "license": "GPL-3.0",
+    "type": "symfony-bundle",
+    "description": "Symfony Bundle for the Owasys OWA11 tracking device",
+    "homepage": "https://coffee-bike.com",
+    "authors": [
+        {
+            "name": "Jonas Dambacher",
+            "email": "jonas.dambacher@coffee-bike.com"
         },
-        "classmap": [
-            "app/AppKernel.php",
-            "app/AppCache.php"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
+        {
+            "name": "Jannik Kroeger",
+            "email": "jannik.kroeger@coffee-bike.com"
+        },
+
+    ],
+    "autoload": {
+        "psr-4": { "CoffeeBike\\OwasysBundle\\": "" },
     },
     "require": {
         "php": ">=5.5.9",
-        "symfony/symfony": "3.0.*",
+        "symfony/symfony": "2.8.*",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
@@ -53,17 +55,6 @@
     "config": {
         "platform": {
             "php": "5.5.9"
-        }
-    },
-    "extra": {
-        "symfony-app-dir": "app",
-        "symfony-bin-dir": "bin",
-        "symfony-var-dir": "var",
-        "symfony-web-dir": "web",
-        "symfony-tests-dir": "tests",
-        "symfony-assets-install": "relative",
-        "incenteev-parameters": {
-            "file": "app/config/parameters.yml"
         }
     }
 }
