Added relationship between Tracker and Messages

--- a/Resources/config/doctrine/AbstractMessage.orm.yml
+++ b/Resources/config/doctrine/AbstractMessage.orm.yml
@@ -16,3 +16,9 @@ CoffeeBike\OwasysBundle\Entity\AbstractMessage:
         timestamp:
             type: bigint
     lifecycleCallbacks: {  }
+    manyToOne:
+        tracker:
+            targetEntity: Tracker
+            joinColumn:
+                name: tracker_id
+                referencedColumnName: id
