--- a/Resources/config/doctrine/AbstractMessage.orm.yml
+++ b/Resources/config/doctrine/AbstractMessage.orm.yml
@@ -1,5 +1,11 @@
 CoffeeBike\OwasysBundle\Entity\AbstractMessage:
-    type: entity
+    type: mappedSuperclass
+    manyToOne:
+        tracker:
+            targetEntity: Tracker
+            joinColumn:
+                name: tracker_id
+                referencedColumnName: id
     table: null
     repositoryClass: CoffeeBike\OwasysBundle\Entity\AbstractMessageRepository
     id:
@@ -16,9 +22,3 @@ CoffeeBike\OwasysBundle\Entity\AbstractMessage:
         timestamp:
             type: bigint
     lifecycleCallbacks: {  }
-    manyToOne:
-        tracker:
-            targetEntity: Tracker
-            joinColumn:
-                name: tracker_id
-                referencedColumnName: id
