Added sellingmode to ORM

--- a/Resources/config/doctrine/Tracker.orm.yml
+++ b/Resources/config/doctrine/Tracker.orm.yml
@@ -26,4 +26,6 @@ CoffeeBike\OwasysBundle\Entity\Tracker:
         alarmPhoneNo:
             type: string
             length: 255
+        sellingMode:
+            type: boolean
     lifecycleCallbacks: {  }
