--- a/Resources/config/doctrine/Message.MessageA.orm.yml
+++ b/Resources/config/doctrine/Message.MessageA.orm.yml
@@ -7,6 +7,8 @@ CoffeeBike\OwasysBundle\Entity\Message\MessageA:
             type: integer
         info:
             type: integer
+            nullable: true
         km:
             type: integer
+            nullable: true
     lifecycleCallbacks: {  }
