added field for logging the sellingmode switch

--- a/Resources/config/doctrine/Tracker.orm.yml
+++ b/Resources/config/doctrine/Tracker.orm.yml
@@ -30,4 +30,7 @@ CoffeeBike\OwasysBundle\Entity\Tracker:
         sellingMode:
             type: boolean
             nullable: true
+        sellingModeDate:
+            type: datetime
+            nullable: true
     lifecycleCallbacks: {  }
