--- a/Resources/config/doctrine/Message.MessageF.orm.yml
+++ b/Resources/config/doctrine/Message.MessageF.orm.yml
@@ -9,6 +9,7 @@ CoffeeBike\OwasysBundle\Entity\Message\MessageF:
         internalVoltage:
             type: string
             column: internal_voltage
+            nullable: true
         movement:
             type: boolean
             nullable: true
