--- a/Resources/config/doctrine/Message.MessageF.orm.yml
+++ b/Resources/config/doctrine/Message.MessageF.orm.yml
@@ -31,7 +31,7 @@ CoffeeBike\OwasysBundle\Entity\Message\MessageF:
             type: bigint
             nullable: true
         plmn:
-            type: integer
+            type: string
             nullable: true
         rssi:
             type: integer
