Added alarm counter

--- a/Resources/config/doctrine/Tracker.orm.yml
+++ b/Resources/config/doctrine/Tracker.orm.yml
@@ -39,4 +39,6 @@ CoffeeBike\OwasysBundle\Entity\Tracker:
         defaultLongitude:
             type: float
             nullable: true
+        amountOfAlarmMessages:
+            type: integer
     lifecycleCallbacks: {  }
