--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require": {
         "php": ">=5.5.9",
         "symfony/framework-bundle": "~2.3|~3.0",
-        "doctrine/orm": "2.4.*"
+        "doctrine/orm": "~2.5"
     },
     "require-dev": {
         "symfony/console": "~2.3|~3.0",
